[package]
name = "chillup"
version = "0.4.0"
authors = ["Cokemonkey11"]
edition = "2018"
description = "A dependency search tool for wurstlang libraries"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Cokemonkey11/chillup"
repository = "https://github.com/Cokemonkey11/chillup"
readme = "README.md"
keywords = ["wurst", "wurstlang", "dependencies", "search"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-client"]

[dependencies]
anyhow    = "1.0"
octocrab = "0.25.1"
paw       = "1.0"
reqwest   = { version = "0.11", features = ["blocking"] }
select    = "0.4"
thiserror = "1.0"
